<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rosado"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editmes"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/editmes"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splistactas" />

    <EditText
        android:id="@+id/editvalor"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/editvalor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spctas" />

    <Button
        android:id="@+id/btngrabar"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/btngrabar"
        android:onClick="grabarcta"
        android:textColorHint="#FAF6F6"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editvalor" />

    <Button
        android:id="@+id/btnconsultar"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/btnconsultar"
        android:onClick="buscarCta"
        android:textColorHint="#F6F1F1"
        app:backgroundTint="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btngrabar" />

    <Button
        android:id="@+id/btncomparar"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="356dp"
        android:hint="@string/btncomparar"
        android:onClick="comparar"
        android:textColorHint="#FAF8F8"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spctas"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spmes"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editsele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splistactas" />

    <Spinner
        android:id="@+id/spmes"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toStartOf="@+id/spmes"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calendario_32"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/splistactas"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncomparar"
        app:layout_constraintVertical_bias="0.247"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:hint="@string/btnEliminar"
        android:onClick="EliminarProducto"
        android:textColorHint="#FAF7F7"
        app:backgroundTint="#FFC107"
        app:layout_constraintEnd_toStartOf="@+id/btncomparar"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnconsultar" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/btnModificar"
        android:onClick="modificarProducto"
        android:textColorHint="#F8F5F5"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminar" />
</androidx.constraintlayout.widget.ConstraintLayout>